# twsignals

./: .dockerignore  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  QUICK_DEPLOY.md  README.md  TRADINGVIEW_SETUP.md  app.py  docker-compose.yml  gunicorn.conf.py  main.py  pyproject.toml  render.yaml  requirements-render.txt  requirements.txt  task.md
.claude/agents/: api-specialist.md  senior-architect.md  senior-python-dev.md  tdd-senior-dev.md
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/: __init__.py  webhook.py
app/core/: config.py  logging.py  security.py
app/models/: __init__.py  webhook.py
app/services/: __init__.py  telegram.py
scripts/: setup.py  test_webhook.py
tests/: __init__.py  test_webhook.py
